[package]
name = "orion-fuzz"
version = "0.1.0"
authors = ["brycx <brycx@protonmail.com>"]
edition = "2018"

[dependencies]
honggfuzz = "0.5.54"
rand = "0.8.3"
rand_chacha = "0.3.0"
sodiumoxide = "0.2.6"
ring = "0.16.20"
blake2-rfc = "0.2.18"
chacha = "0.3.0"
orion = { git = "https://github.com/orion-rs/orion", branch = "curve25519" }
rust-argon2 = "0.8.3"
x25519-dalek = "1.2.0"

[[bin]]
name = "high_level_api"
path = "src/high_level_api.rs"

[[bin]]
name = "aead"
path = "src/aead.rs"

[[bin]]
name = "hash"
path = "src/hash.rs"

[[bin]]
name = "mac"
path = "src/mac.rs"

[[bin]]
name = "stream"
path = "src/stream.rs"

[[bin]]
name = "newtypes"
path = "src/newtypes.rs"

[[bin]]
name = "kdf"
path = "src/kdf.rs"

[[bin]]
name = "aead_stream"
path = "src/aead_stream.rs"

[[bin]]
name = "ecc"
path = "src/ecc.rs"

[profile.release]
opt-level = 3