[package]
name = "orion-fuzz"
version = "0.1.0"
authors = ["brycx <brycx@protonmail.com>"]
edition = "2021"

[dependencies]
honggfuzz = "0.5.57"
rand = "0.9.0"
rand_chacha = "0.9.0"
sodiumoxide = "0.2.6"
ring = "0.17.8"
blake2-rfc = "0.2.18"
chacha = "0.4.0"
rust-argon2 = "2.1.0"
x25519-dalek = "2.0.1"
bincode = { version = "2.0.1", features = ["serde"] }
serde = "1.0.124"
sha3 = "0.10.6"
fips203 = "0.4.2"
x-wing = "0.0.1-pre.1"
kem = "0.3.0-pre.0"
hpke = "0.13.0"

[dependencies.orion]
git = "https://github.com/orion-rs/orion"
branch = "master"
features = ["serde"]

[[bin]]
name = "high_level_api"
path = "src/high_level_api.rs"

[[bin]]
name = "aead"
path = "src/aead.rs"

[[bin]]
name = "hash"
path = "src/hash.rs"

[[bin]]
name = "mac"
path = "src/mac.rs"

[[bin]]
name = "stream"
path = "src/stream.rs"

[[bin]]
name = "newtypes"
path = "src/newtypes.rs"

[[bin]]
name = "kdf"
path = "src/kdf.rs"

[[bin]]
name = "aead_stream"
path = "src/aead_stream.rs"

[[bin]]
name = "ecc"
path = "src/ecc.rs"

[[bin]]
name = "serde"
path = "src/serde.rs"

[[bin]]
name = "xof"
path = "src/xof.rs"

[[bin]]
name = "kem"
path = "src/kem.rs"

[[bin]]
name = "hpke"
path = "src/hpke.rs"

[profile.release]
opt-level = 3
